[package]
name = "archerd"
version = "0.1.0"
edition = "2024"

[package.metadata]
ProtocolVersion = "1.3.3"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
aerospace-rocketry-lib = { git = "https://github.com/unl-rocketry/aerospace-rocketry-lib.git" }
serialport = "4.8.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
cargo_metadata = "0.23.1"
